// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  
  <input
    error=""
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  <label
    className="sc-bwzfXH eQhPVJ"
    htmlFor="range-with-label"
  >
     
    Text label
     
  </label>
  <input
    error=""
    id="range-with-label"
    label="Text label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  
  <input
    error="Error message"
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  <div
    className="sc-bdVaJa kKTvpA"
  >
    Error message
  </div>
</div>
`;
